make my profile prettier

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link rel="stylesheet" href="index.css">
 
-    <title>Profile</title>
+    <title>The Gilad Expirience </title>
 
   </head>
   <body>
